// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobTypeFilter should match snapshot in default state 1`] = `
<div>
  <div
    class="relative w-[218px]"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Select job type"
      class="w-full h-[44px] rounded-lg px-4 bg-[#EBEBEB] text-black flex justify-between items-center hover:bg-[#E5E5E5] transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-gray-300 "
      type="button"
    >
      <span>
        Select Job Type
      </span>
      <img
        alt=""
        aria-hidden="true"
        class="transform transition-transform duration-200 "
        data-nimg="1"
        decoding="async"
        height="21"
        loading="lazy"
        src="/_next/image?url=%2Farrow-down.png&w=48&q=75"
        srcset="/_next/image?url=%2Farrow-down.png&w=32&q=75 1x, /_next/image?url=%2Farrow-down.png&w=48&q=75 2x"
        style="color: transparent;"
        width="21"
      />
    </button>
  </div>
</div>
`;

exports[`JobTypeFilter should match snapshot with dropdown open 1`] = `
<div>
  <div
    class="relative w-[218px]"
  >
    <button
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Select job type"
      class="w-full h-[44px] rounded-lg px-4 bg-[#EBEBEB] text-black flex justify-between items-center hover:bg-[#E5E5E5] transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-gray-300 ring-2 ring-gray-300"
      type="button"
    >
      <span>
        Select Job Type
      </span>
      <img
        alt=""
        aria-hidden="true"
        class="transform transition-transform duration-200 rotate-180"
        data-nimg="1"
        decoding="async"
        height="21"
        loading="lazy"
        src="/_next/image?url=%2Farrow-down.png&w=48&q=75"
        srcset="/_next/image?url=%2Farrow-down.png&w=32&q=75 1x, /_next/image?url=%2Farrow-down.png&w=48&q=75 2x"
        style="color: transparent;"
        width="21"
      />
    </button>
    <ul
      class="absolute top-[48px] left-0 w-full bg-white text-black shadow-lg rounded-lg z-10 py-1 animate-[scaleIn_0.2s_ease-out] origin-top"
      role="listbox"
    >
      <li
        aria-selected="false"
        role="option"
      >
        <button
          class="w-full px-4 py-2 text-left hover:bg-gray-100 transition-colors focus:outline-none focus:bg-gray-100"
        >
          Hybrid
        </button>
      </li>
      <li
        aria-selected="false"
        role="option"
      >
        <button
          class="w-full px-4 py-2 text-left hover:bg-gray-100 transition-colors focus:outline-none focus:bg-gray-100"
        >
          Full time
        </button>
      </li>
      <li
        aria-selected="false"
        role="option"
      >
        <button
          class="w-full px-4 py-2 text-left hover:bg-gray-100 transition-colors focus:outline-none focus:bg-gray-100"
        >
          Part time
        </button>
      </li>
      <li
        aria-selected="false"
        role="option"
      >
        <button
          class="w-full px-4 py-2 text-left hover:bg-gray-100 transition-colors focus:outline-none focus:bg-gray-100"
        >
          Internship
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`JobTypeFilter should match snapshot with selected value 1`] = `
<div>
  <div
    class="relative w-[218px]"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Select job type"
      class="w-full h-[44px] rounded-lg px-4 bg-[#EBEBEB] text-black flex justify-between items-center hover:bg-[#E5E5E5] transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-gray-300 "
      type="button"
    >
      <span>
        Full time
      </span>
      <img
        alt=""
        aria-hidden="true"
        class="transform transition-transform duration-200 "
        data-nimg="1"
        decoding="async"
        height="21"
        loading="lazy"
        src="/_next/image?url=%2Farrow-down.png&w=48&q=75"
        srcset="/_next/image?url=%2Farrow-down.png&w=32&q=75 1x, /_next/image?url=%2Farrow-down.png&w=48&q=75 2x"
        style="color: transparent;"
        width="21"
      />
    </button>
  </div>
</div>
`;
